tests/paczka1/small_fuzzy/86633515.err
Error in line 4: lO5 S816 33,6
Error in line 1: il1s S816 97,7
